# cAudio

./: .gitignore  CMakeLists.txt  Doxyfile  License.txt  README.md  ReadMe.txt  ToDo.txt  cAudio.cbp  cAudio.layout  cAudio.sln  cAudio.vcproj  cAudioStressTestResults.xls  cAudioWorkSpace.workspace
CMake/: Dependencies.cmake  InstallDependencies.cmake
CMake/Templates/: cAudioBuildSettings.h.in
DependenciesSource/libogg-1.2.2/: CMakeLists.txt
DependenciesSource/libogg-1.2.2/include/ogg/: os_types.h
DependenciesSource/libvorbis-1.3.2/: CMakeLists.txt
DependenciesSource/libvorbis-1.3.2/src/: psy.c  tone.c
Examples/: buildAll.sh
Examples/Tutorial10Fluidlite/: Makefile  cAudioEngineLog.html  cmake_install.cmake
Examples/Tutorial1_2DSound/: CMakeLists.txt  Makefile  Tutorial1_2DSound.cbp  Tutorial1_2DSound.vcproj  main.cpp
Examples/Tutorial2_3DSound/: CMakeLists.txt  Makefile  Tutorial2_3DSound.cbp  Tutorial2_3DSound.vcproj  main.cpp
Examples/Tutorial3_MemoryPlayback/: Makefile  Tutorial3_MemoryPlayback.cbp  Tutorial3_MemoryPlayback.vcproj  main.cpp
Examples/Tutorial4_AudioCapture/: Makefile  Tutorial4_AudioCapture.cbp  Tutorial4_AudioCapture.vcproj  main.cpp
Examples/Tutorial8_CustomManagerEventHandler/: CMakeLists.txt
Examples/Tutorial8_CustomManagerEventHandler/include/: cTestManager.h
Examples/Tutorial8_CustomManagerEventHandler/src/: cTestManager.cpp  main.cpp
Headers/: cAudio.h  cAudioCapture.h  cAudioEffects.h  cAudioManager.h  cAudioPlugin.h  cAudioSource.h  cConsoleLogReceiver.h  cEFXFunctions.h  cEffect.h  cFileLogReceiver.h  cFileSource.h  cFileSourceFactory.h  cFilter.h  cListener.h  cLogger.h  cMemoryManager.h  cMemoryOverride.h  cMemorySource.h  cMemoryTracker.h  cMutex.h  cNonMemoryManager.h  cOggAudioDecoderFactory.h  cOggDecoder.h  cPluginManager.h  cRawAudioDecoderFactory.h  cRawDecoder.h  cSTLAllocator.h  cStandardMemoryProvider.h  cThread.h  cUtils.h  cWavAudioDecoderFacotry.h  cWavAudioDecoderFactory.h  cWavDecoder.h
Plugins/EAXLegacyPreset/: CMakeLists.txt
Plugins/mp3Decoder/: CMakeLists.txt
Plugins/mp3Decoder/include/: cMP3Decoder.h
Plugins/mp3Decoder/src/: cMP3Decoder.cpp
Samples/: Tutorial-Info.plist
Source/: Makefile  cAudio.cpp  cAudioCapture.cpp  cAudioEffects.cpp  cAudioManager.cpp  cAudioMemory.cpp  cAudioPlugin.cpp  cAudioSleep.cpp  cAudioSource.cpp  cConsoleLogReceiver.cpp  cEffect.cpp  cFileLogReceiver.cpp  cFileSource.cpp  cFilter.cpp  cListener.cpp  cLogger.cpp  cMemoryManager.cpp  cMemorySource.cpp  cMemoryTracker.cpp  cMutex.cpp  cOggAudioDecoderFactory.cpp  cOggDecoder.cpp  cPluginManager.cpp  cRawDecoder.cpp  cStandardMemoryProvider.cpp  cThread.cpp  cWavAudioDecoderFactory.cpp  cWavdecoder.cpp  cwavdecoder.cpp
cAudio/: CMakeLists.txt  cAudio.cbp  cAudio_src_files.cmake
cAudio-Iphone.xcodeproj/: project.pbxproj
cAudio-Osx.xcodeproj/: project.pbxproj
cAudio/Headers/: cAudioBuildSettings.h  cAudioCapture.h  cAudioEffects.h  cAudioManager.h  cAudioSource.h  cAudioStaticSource.h  cConsoleLogReceiver.h  cEFXFunctions.h  cEffect.h  cFileLogReceiver.h  cFileSource.h  cFileSourceFactory.h  cFilter.h  cListener.h  cLogger.h  cMemoryOverride.h  cMemorySource.h  cMemoryTracker.h  cMutex.h  cOggAudioDecoderFactory.h  cOggDecoder.h  cOpenALAudioDeviceList.h  cOpenALDeviceContext.h  cOpenALUtil.h  cPluginManager.h  cRawAudioDecoderFactory.h  cRawDecoder.h  cStandardMemoryProvider.h  cThread.h  cUtils.h  cWavAudioDecoderFactory.h  cWavDecoder.h
cAudio/include/: EAudioFormats.h  IAudioCapture.h  IAudioDecoder.h  IAudioDecoderFactory.h  IAudioDeviceContext.h  IAudioDeviceList.h  IAudioEffects.h  IAudioManager.h  IAudioPlugin.h  IAudioSource.h  ICaptureEventHandler.h  IDataSource.h  IDataSourceFactory.h  IEffect.h  IEffectParameters.h  IFilter.h  IListener.h  ILogReceiver.h  ILogger.h  IManagerEventHandler.h  IMemoryProvider.h  IPluginManager.h  IRefCounted.h  ISourceEventHandler.h  IThread.h  cAudio.h  cAudioBuildSettings.h  cAudioDefines.h  cAudioMemory.h  cAudioPlatform.h  cAudioSleep.h  cAudioString.h  cSTLAllocator.h  cVector3.h
cAudio/src/: cAudio.cpp  cAudioCapture.cpp  cAudioEffects.cpp  cAudioManager.cpp  cAudioMemory.cpp  cAudioSleep.cpp  cAudioSource.cpp  cAudioString.cpp  cConsoleLogReceiver.cpp  cEffect.cpp  cFileLogReceiver.cpp  cFileSource.cpp  cFilter.cpp  cListener.cpp  cLogger.cpp  cMemorySource.cpp  cMemoryTracker.cpp  cMutex.cpp  cOggAudioDecoderFactory.cpp  cOggDecoder.cpp  cOpenALAudioDeviceList.cpp  cOpenALDeviceContext.cpp  cPluginManager.cpp  cRawDecoder.cpp  cStandardMemoryProvider.cpp  cThread.cpp  cWavAudioDecoderFactory.cpp  cWavDecoder.cpp
cAudioCSharp/: AudioCaptureBuffer.cs  AudioFormats.cs  DoubleVector.cs  IAudioCapture.cs  IAudioDecoder.cs  IAudioDecoderFactory.cs  IAudioDeviceContext.cs  IAudioDeviceList.cs  IAudioManager.cs  IAudioPlugin.cs  IAudioSource.cs  ICaptureEventHandler.cs  IDataSource.cs  IDataSourceFactory.cs  IDeviceType.cs  IListener.cs  ILogReceiver.cs  ILogger.cs  IManagerEventHandler.cs  IMemoryProvider.cs  IPluginManager.cs  IRefCounted.cs  ISourceEventHandler.cs  IThread.cs  IThreadWorker.cs  IntVector.cs  LogLevel.cs  SWIGTYPE_p_AudioFormats.cs  SWIGTYPE_p_IAudioCapture.cs  SWIGTYPE_p_IDataSourceFactory.cs  SWIGTYPE_p_IListener.cs  SWIGTYPE_p_ILogReceiver.cs  SWIGTYPE_p_ILogger.cs  SWIGTYPE_p_IManagerEventHandler.cs  SWIGTYPE_p_ISourceEventHandler.cs  SWIGTYPE_p_LogLevel.cs  SWIGTYPE_p_cAudio__IAudioEffects.cs  SWIGTYPE_p_cVector3.cs  SWIGTYPE_p_float.cs  SWIGTYPE_p_p_char.cs  (+8 more)
cAudioCSharpWrapper/: CMakeLists.txt  GenerateCSharpBinding.bat
doc/: Doxyfile
include/: EAudioFormats.h  IAudio.h  IAudioCapture.h  IAudioDecoder.h  IAudioDecoderFactory.h  IAudioEffects.h  IAudioManager.h  IAudioPlugin.h  IAudioSource.h  ICaptureEventHandler.h  IDataSource.h  IDataSourceFactory.h  IEffect.h  IEffectParameters.h  IFilter.h  IListener.h  ILogReceiver.h  ILogger.h  IManagerEventHandler.h  IMemoryProvider.h  IPluginManager.h  IRefCounted.h  ISourceEventHandler.h  cAudio.h  cAudioDefines.h  cAudioMemory.h  cAudioPlatform.h  cAudioSleep.h  cVector3.h
(+131 files in other folders)
